style.css
@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');

/* Element Selectors */

html, body {
  height: 100%;

  /* following two used for easter egg: */
  max-width: 100%;
  overflow-x: hidden;
}

html, body, footer, footer a {
  width: 100%;
  font-family: 'Poppins', sans-serif;
}

button {
  border-radius: 30px !important;
}
/* Class Selectors */

/* aboutgroups (events) */
.card-text {
  font-size: 14pt;
}

/* front page carousel images */
.carousel-inner img {
  width: 100%;
  height: 100%;
}

.carouselTint {
  filter: brightness(.6);
}
/* front page carousel caption */
.carousel-caption {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

/* colour of text on hover (my groups page) */
.clickableDiv a:hover {
  text-decoration:none;
  color: #d8d8d8;
}

/* colour of text (my groups page) */
.clickableDiv a {
  color: #f2f2f2;
}

/* style of each groups div (my groups page) */
.clickableDiv {
  border: 1px solid rgba(255, 255, 255, 0.3);
  border-radius: 6px;
  padding-top: 5px;
  margin-bottom: 7px;
  width: 100%;
}

/* size of 'join group' button on aboutgroups page */
.createjoin {
  width: 180px;
}

/* style of transparent divs */
.divBorder {
  border: 1px solid rgba(255, 255, 255, 0.25);
  border-radius: 6px;
  background: rgba(255, 255, 255, 0.15);
  
}

/* three icons on front page,  */
.icons {
  width: 50%;
  background-color: transparent;
border: none;
}

/* background divs */
.loggedInBG {
  background: url("img/loggedin/sky.jpg");
  background-size: cover;
  height: 82%;
}

/* background for createjoin page */
.masthead {
  min-height: 100%;
  width: 100%;
  background: url("img/createjoin/background.jpg");
  background-position: center center;
  background-size: cover;
}

.modal {
  border: 0px;
}
.modal-content {
  background: #FFF;
  color: #1A75C1;
}

.modal-header {
  background: #AED6F1;
  width: 100%;
}
.modaluserpw {
  margin-bottom: 20px;
  width: 100%
}

/* positions donate modal */
.modal-content {
  position: relative;
  transform: translateY(70%);
}
.modal-header {
  background-color: #FF9900;
}

/* centers title and description for donate modal */
.modal-title {
  position: relative;
top: -14px !important;

}
.modal-desc {
  top: 8px !important;
  position: relative;
  

.loginmodal-submit {
  background: #FFF;
  color: #1A75C1;
  width: 70%;
}
.c {
  align-content: center;
  margin-bottom: 10px;
  width: 70%;
  
}

.modaluserpw {
  width: 100%;
}


/* links in navbar */
.nav-link {
  font-size: 1.1em;
  text-align: right;
}

/* offsets the navbar when 'about' is clicked */
.navbarOffset {
  top: -130px;
  position: relative;
}

.oneliner {
  width: 80%;
}
/* event panel */
.panel-title {
  background: #1A75C1;
}
/* event panel title */
.panel-title a {
  color: #FFF;
}
/* event panel title */
.panel-title a:hover {
  text-decoration: none;
}
/* registration page bg */
.registerBG {
  background: url("img/loggedin/sky.jpg");
  background-size: cover;
}
/* colors for sign in button in nav bar */
.signin {
  background-color: #FFF;
  color: #1A75C1;
}

/* background color for site footer */
.site-footer {
  background: #273443;
  color: white;
}

/* site footer links */
.site-footer a {
  color: #D5D5D5;
  text-decoration:none;
}
/* hover on site footer links  */
.site-footer a:hover {
  color: white;
}

/* colour for buttons (most pages) */
.submitButton {
  background-color: #1A75C1;
}

/* colour of title text for most pages */
.title {
  color: #F6F6F6;
}

#belowCarousel {
  background-color: rgb(155, 203, 245);
}
#event1link {
  color: navy;
}
#firstDiv {
  background-color: #fff;
}
#grpimg {
  width: 250px;
  height: 250px;
}
#icontext {
  font-size: 16pt;
}

#descrip {
font-size: 10pt;
padding-top: 2%;
}

#slideshow {
  padding: 0 !important;
}
#eventcard {
  background: rgba(255, 255, 255, 0);
}
#howitworks {
  font-size: 16pt;
  margin-bottom: 8px;
}

.tenptfont {
  font-size: 10pt;
  
}

#mockupContainer {
  width: 100%;
}
#mockup {
  width: 30%;
}

#seconddiv {
  background-color: #DDEDFB;
}


#missionStatement {
  color: white;
  background-color:#3193E3;
}

#citylogo {
  width: 50%;
}

#BudgetErrorID {
  color: red;
}
/* copyright in footer */
#copyright {
  background-color: #232F3C;
}

/* images on mygroups page */
img.mr-2 {
  width: 100px;
  height: 100px;
  border: 1px solid #8c8c8c;
}

/* ID Selectors */

#aboutModal {
  background: rgba(255, 255, 255, 0.3);
  color: #1A75C1;
}
/* content of mygroups page */
#content {
  font-size: 12pt;
  color: #F6F6F6;
}

/* title of main div containers */
#main {
  font-size: 20pt;
}

/* smaller text bodies of main div containers */
#maintext {
  color: #1A75C1;
  font-size: 14pt;
}
#usernameError, #passwordError, #passwordMatch, #emailError, #registrationError, #loginErrorID, #loginErrorID2, #groupnameError, #groupPwError, #groupPwMatch, #groupSizeError, #descriptionError, #joinGroupError {
  color: red;
  font-size: 18px;
  margin: auto;
  padding-top: 5px;
}

#selectedEvent {
  font-size: 20px;
  font-weight: bold;
}
/*---Media Queries --*/
@media (max-width: 992px) {

}
@media (max-width: 768px) {
  .navbar-brand {
    width: 60%;
  }
  .navbar-brand img {
    width: 100%;
  }

  #A{
    left: -150%; /* Set initial position for each image off-screen left -- adjust according to image width */
  }
  #grpimg {
    width: 150px;
    height: 150px;
  }
  #mockup {
    width: 70%;
  }

}


@media (max-width: 576px) {

  /* hides carousel captions */
  .carousel-caption h1, .carousel-caption h3 {
    display: none;
  }

  /* card title to smaller size (home page, aboutgroup) */
  .card-title {
    font-size: 20pt;
  }

  /* title for createjoin page */
  .createheading {
    display: none;
  }

  /* used to center text */
  .textcenter{
    text-align: center;
  }

  /* used on home page */
  .greyBG {
    background-color: #e9ecef;
  }
  
/* easter egg is smaller when viewed on smaller viewport */
  #A{ 
    width: 500px;
  }

}


#A{
  display: none;
  position:absolute;
  z-index: 1;
	left: -100%; /* Set initial position for each image off-screen left -- adjust according to image width */
	animation:mymove 8s infinite;	/* total animation time for each image is 8 seconds, loops forever */
	animation-direction:normal;	
	animation-delay:0s;
	-webkit-animation-delay: 0s;
}

@keyframes mymove
	{
	from {left:-100%;}	/*off-screen left (adjust for image width)*/
	to {left:150%;}		/*off-screen right*/
	}

